Params split in middleware
Instead of splitting only fields we split whole params
Right now channels for channels params we include only fields
It should be semi-automatic to include more.